--- a/entry/optimal-point.html
+++ b/entry/optimal-point.html
@@ -11,12 +11,12 @@
       window.onload = function () {
         var ss = document.createElement("link");
         ss.rel = "stylesheet";
-        ss.href = "/prism.css";
+        ss.href = "/blog/prism.css";
         document.getElementsByTagName("head")[0].appendChild(ss);
       };
     </script>
     <noscript>
-      <link rel="stylesheet" href="/prism.css">
+      <link rel="stylesheet" href="/blog/prism.css">
     </noscript>
     <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
   </head>
@@ -25,7 +25,7 @@
       <h1>johnchen902's Blog</h1>
     </header>
     <nav>
-      <a href="/">Index</a>
+      <a href="/blog/">Index</a>
     </nav>
     <article>
 <header><h2>Optimal Point</h2></header>
