--- a/entry/optimal-point.html
+++ b/entry/optimal-point.html
@@ -17,6 +17,7 @@
     </script>
     <noscript>
       <link rel="stylesheet" href="/blog/prism.css">
+      <style> .scriptonly { display: none } </style>
     </noscript>
     <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
   </head>
