--- a/entry/roadside-trees.html
+++ b/entry/roadside-trees.html
@@ -17,6 +17,7 @@
     </script>
     <noscript>
       <link rel="stylesheet" href="/blog/prism.css">
+      <style> .scriptonly { display: none } </style>
     </noscript>
 
   </head>
