--- a/entry/hello-world.html
+++ b/entry/hello-world.html
@@ -70,7 +70,7 @@
     <footer>
       <p>
         All codes here come with ABSOLUTELY NO WARRANTY.
-        These codes are licensed under the GNU GPLv3.
+        These codes are licensed under the GNU AGPLv3.
         See <a href="https://www.gnu.org/licenses/">
         https://www.gnu.org/licenses/</a> for detail.
       </p>
