Add canonical link to all entries.

--- a/entry/expression.html
+++ b/entry/expression.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Find the shortest string that matches a given regular expression and contains a given substring.">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;expression.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
