--- a/entry/leaders.html
+++ b/entry/leaders.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Is there an odd-length simple path between two specified vertices in a given undirected graph?">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;leaders.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
