--- a/entry/hello-world.html
+++ b/entry/hello-world.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Print &#39;Hello, world!&#39;">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;hello-world.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
