--- a/entry/optimal-point.html
+++ b/entry/optimal-point.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Find an integer point minimizing the maximum Manhattan distance to each given integer points in 3-space.">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;optimal-point.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
