--- a/entry/roadside-trees.html
+++ b/entry/roadside-trees.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Compute the longest increasing subsequence while inserting almost-smallest numbers or deleting almost-leftmost numbers.">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;roadside-trees.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
