--- a/entry/venn-diagram.html
+++ b/entry/venn-diagram.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Fit two circles into a specified rectangle. The areas of the circles and the area of their intersection are also specified.">
+    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;venn-diagram.html">
     <style>p{max-width:40em;}</style>
     <script>
       window.onload = function () {
