--- a/entry/venn-diagram.html
+++ b/entry/venn-diagram.html
@@ -8,14 +8,8 @@
     <meta name="description" content="Fit two circles into a specified rectangle. The areas of the circles and the area of their intersection are also specified.">
     <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;venn-diagram.html">
     <style>p{max-width:40em;}</style>
-    <script>
-      window.onload = function () {
-        var ss = document.createElement("link");
-        ss.rel = "stylesheet";
-        ss.href = "/blog/prism.css";
-        document.getElementsByTagName("head")[0].appendChild(ss);
-      };
-    </script>
+    <link rel="preload" href="/blog/prism.css" as="style" onload="this.rel='stylesheet'">
+    <script defer src="/blog/loadcss.js"></script>
     <noscript>
       <link rel="stylesheet" href="/blog/prism.css">
       <style> .scriptonly { display: none } </style>
