--- a/entry/crimiville.html
+++ b/entry/crimiville.html
@@ -45,7 +45,9 @@
 <section>
   <header><h3>Solution</h3></header>
   <p>
-    As a direct consequences of Hall's theorem,
+    As a direct consequences of
+    <a href="https://en.wikipedia.org/wiki/Hall%27s_marriage_theorem">
+    Hall's theorem</a>,
     we just have to check if there is a perfect matching
     to answer the first question.
   </p>
