Add target="_blank" to specific links.

--- a/entry/ear-decomposition.html
+++ b/entry/ear-decomposition.html
@@ -29,7 +29,7 @@
   <header><h3>Problem</h3></header>
   <p>
     Find an
-    <a href="https://en.wikipedia.org/wiki/Ear_decomposition">
+    <a href="https://en.wikipedia.org/wiki/Ear_decomposition" target="_blank">
     ear decomposition</a> of an undirected graph.
     In this problem both endpoints of each ear must belong
     to earlier ears.
