--- a/entry/crimiville.html
+++ b/entry/crimiville.html
@@ -46,7 +46,7 @@
   <header><h3>Solution</h3></header>
   <p>
     As a direct consequences of
-    <a href="https://en.wikipedia.org/wiki/Hall%27s_marriage_theorem">
+    <a href="https://en.wikipedia.org/wiki/Hall%27s_marriage_theorem" target="_blank">
     Hall's theorem</a>,
     we just have to check if there is a perfect matching
     to answer the first question.
