Redirect to new site.

--- a/entry/ear-decomposition.html
+++ b/entry/ear-decomposition.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Find an ear decomposition of an undirected graph.">
-    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;ear-decomposition.html">
+    <link rel="canonical" href="https://user.paga.moe/johnchen902/blog/entry&#47;ear-decomposition.html">
+    <meta http-equiv="refresh" content="0; url=https://user.paga.moe/johnchen902/blog/entry&#47;ear-decomposition.html">
     <style>p{max-width:40em;}</style>
     <link rel="preload" href="/blog/prism.css" as="style" onload="this.rel='stylesheet'">
     <script defer src="/blog/loadcss.js"></script>
