--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="This blog features competitive-programming problems, their solutions in English, and accepted source code in high-quality C++.">
-    <link rel="canonical" href="https://johnchen902.github.io/blog/">
+    <link rel="canonical" href="https://user.paga.moe/johnchen902/blog/">
+    <meta http-equiv="refresh" content="0; url=https://user.paga.moe/johnchen902/blog/">
     <style>
       p { max-width: 40em; }
       dl { padding-left: 40px; }
