--- a/entry/crimiville.html
+++ b/entry/crimiville.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="In a bipartite graph, is there a S &sube; X s.t. |&Gamma;(S)| &lt; |S|? If not, maximize &sum;{i&in;S}w(i) &minus; &sum;{i&in;&Gamma;(S)}w(i) subject to |&Gamma;(S)| = |S|.">
-    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;crimiville.html">
+    <link rel="canonical" href="https://user.paga.moe/johnchen902/blog/entry&#47;crimiville.html">
+    <meta http-equiv="refresh" content="0; url=https://user.paga.moe/johnchen902/blog/entry&#47;crimiville.html">
     <style>p{max-width:40em;}</style>
     <link rel="preload" href="/blog/prism.css" as="style" onload="this.rel='stylesheet'">
     <script defer src="/blog/loadcss.js"></script>
