--- a/entry/roadside-trees.html
+++ b/entry/roadside-trees.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="johnchen902">
     <meta name="description" content="Compute the longest increasing subsequence while inserting almost-smallest numbers or deleting almost-leftmost numbers.">
-    <link rel="canonical" href="https://johnchen902.github.io/blog/entry&#47;roadside-trees.html">
+    <link rel="canonical" href="https://user.paga.moe/johnchen902/blog/entry&#47;roadside-trees.html">
+    <meta http-equiv="refresh" content="0; url=https://user.paga.moe/johnchen902/blog/entry&#47;roadside-trees.html">
     <style>p{max-width:40em;}</style>
     <link rel="preload" href="/blog/prism.css" as="style" onload="this.rel='stylesheet'">
     <script defer src="/blog/loadcss.js"></script>
